scripts/include/notcurses.h


API const char* notcurses_version(void);
API void notcurses_version_components(int* major, int* minor, int* patch, int* tweak);
struct notcurses; 
struct ncplane;   
struct ncvisual;  
struct ncuplot;   
struct ncdplot;   
struct ncprogbar; 
struct ncfdplane; 
struct ncsubproc; 
struct ncselector;
struct ncmultiselector; 
struct ncreader;  
struct ncfadectx; 
struct nctablet;  
struct ncreel;    
struct nctab;     
struct nctabbed;  
struct ncdirect;  
typedef enum {
  NCBLIT_DEFAULT, 
  NCBLIT_1x1,     
  NCBLIT_2x1,     
  NCBLIT_2x2,     
  NCBLIT_3x2,     
  NCBLIT_BRAILLE, 
  NCBLIT_PIXEL,   
  NCBLIT_4x1,     
  NCBLIT_8x1,     
} ncblitter_e;
typedef enum {
  NCALIGN_UNALIGNED,
  NCALIGN_LEFT,
  NCALIGN_CENTER,
  NCALIGN_RIGHT,
} ncalign_e;
typedef enum {
  NCSCALE_NONE,
  NCSCALE_SCALE,
  NCSCALE_STRETCH,
  NCSCALE_NONE_HIRES,
  NCSCALE_SCALE_HIRES,
} ncscale_e;
API int ncstrwidth(const char* egcs, int* validbytes, int* validwidth)
  __attribute__ ((nonnull (1)));
struct ncvisual_options {
  struct ncplane* n;
  ncscale_e scaling;
  int y, x;
  unsigned begy, begx; 
  unsigned leny, lenx; 
  ncblitter_e blitter; 
  uint64_t flags; 
  uint32_t transcolor; 
  unsigned pxoffy, pxoffx;
};