src/LibNotcurses.jl

module LibNotcurses

using Notcurses_jll
export Notcurses_jll

using CEnum

const uintmax_t = Culong

mutable struct ncdirect end

function ncdirect_init(termtype, fp, flags)
    ccall((:ncdirect_init, notcurses), Ptr{ncdirect}, (Ptr{Cchar}, Ptr{Cint}, Cint), termtype, fp, flags)
end

function ncdirect_core_init(termtype, fp, flags)
    ccall((:ncdirect_core_init, notcurses), Ptr{ncdirect}, (Ptr{Cchar}, Ptr{Cint}, Cint), termtype, fp, flags)
end

function ncdirect_readline(nc, prompt)
    ccall((:ncdirect_readline, notcurses), Ptr{Cchar}, (Ptr{ncdirect}, Ptr{Cchar}), nc, prompt)
end

function ncdirect_set_fg_rgb(nc, rgb)
    ccall((:ncdirect_set_fg_rgb, notcurses), Cint, (Ptr{ncdirect}, Cuint), nc, rgb)
end

function ncdirect_set_bg_rgb(nc, rgb)
    ccall((:ncdirect_set_bg_rgb, notcurses), Cint, (Ptr{ncdirect}, Cuint), nc, rgb)
end

function ncdirect_set_fg_palindex(nc, pidx)
    ccall((:ncdirect_set_fg_palindex, notcurses), Cint, (Ptr{ncdirect}, Cint), nc, pidx)
end

function ncdirect_set_bg_palindex(nc, pidx)
    ccall((:ncdirect_set_bg_palindex, notcurses), Cint, (Ptr{ncdirect}, Cint), nc, pidx)
end

function ncdirect_palette_size(nc)
    ccall((:ncdirect_palette_size, notcurses), Cuint, (Ptr{ncdirect},), nc)
end

function ncdirect_putstr(nc, channels, utf8)
    ccall((:ncdirect_putstr, notcurses), Cint, (Ptr{ncdirect}, Cint, Ptr{Cchar}), nc, channels, utf8)
end

function ncdirect_putegc(nc, channels, utf8, sbytes)
    ccall((:ncdirect_putegc, notcurses), Cint, (Ptr{ncdirect}, Cint, Ptr{Cchar}, Ptr{Cint}), nc, channels, utf8, sbytes)
end

function ncdirect_flush(nc)
    ccall((:ncdirect_flush, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function ncdirect_set_bg_rgb8(nc, r, g, b)
    ccall((:ncdirect_set_bg_rgb8, notcurses), Cint, (Ptr{ncdirect}, Cuint, Cuint, Cuint), nc, r, g, b)
end

function ncdirect_set_fg_rgb8(nc, r, g, b)
    ccall((:ncdirect_set_fg_rgb8, notcurses), Cint, (Ptr{ncdirect}, Cuint, Cuint, Cuint), nc, r, g, b)
end

function ncdirect_set_fg_default(nc)
    ccall((:ncdirect_set_fg_default, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function ncdirect_set_bg_default(nc)
    ccall((:ncdirect_set_bg_default, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function ncdirect_dim_x(nc)
    ccall((:ncdirect_dim_x, notcurses), Cuint, (Ptr{ncdirect},), nc)
end

function ncdirect_dim_y(nc)
    ccall((:ncdirect_dim_y, notcurses), Cuint, (Ptr{ncdirect},), nc)
end

function ncdirect_supported_styles(nc)
    ccall((:ncdirect_supported_styles, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function ncdirect_set_styles(n, stylebits)
    ccall((:ncdirect_set_styles, notcurses), Cint, (Ptr{ncdirect}, Cuint), n, stylebits)
end

function ncdirect_on_styles(n, stylebits)
    ccall((:ncdirect_on_styles, notcurses), Cint, (Ptr{ncdirect}, Cuint), n, stylebits)
end

function ncdirect_off_styles(n, stylebits)
    ccall((:ncdirect_off_styles, notcurses), Cint, (Ptr{ncdirect}, Cuint), n, stylebits)
end

function ncdirect_styles(n)
    ccall((:ncdirect_styles, notcurses), Cint, (Ptr{ncdirect},), n)
end

function ncdirect_cursor_move_yx(n, y, x)
    ccall((:ncdirect_cursor_move_yx, notcurses), Cint, (Ptr{ncdirect}, Cint, Cint), n, y, x)
end

function ncdirect_cursor_enable(nc)
    ccall((:ncdirect_cursor_enable, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function ncdirect_cursor_disable(nc)
    ccall((:ncdirect_cursor_disable, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function ncdirect_cursor_up(nc, num)
    ccall((:ncdirect_cursor_up, notcurses), Cint, (Ptr{ncdirect}, Cint), nc, num)
end

function ncdirect_cursor_left(nc, num)
    ccall((:ncdirect_cursor_left, notcurses), Cint, (Ptr{ncdirect}, Cint), nc, num)
end

function ncdirect_cursor_right(nc, num)
    ccall((:ncdirect_cursor_right, notcurses), Cint, (Ptr{ncdirect}, Cint), nc, num)
end

function ncdirect_cursor_down(nc, num)
    ccall((:ncdirect_cursor_down, notcurses), Cint, (Ptr{ncdirect}, Cint), nc, num)
end

function ncdirect_cursor_yx(n, y, x)
    ccall((:ncdirect_cursor_yx, notcurses), Cint, (Ptr{ncdirect}, Ptr{Cuint}, Ptr{Cuint}), n, y, x)
end

function ncdirect_cursor_push(n)
    ccall((:ncdirect_cursor_push, notcurses), Cint, (Ptr{ncdirect},), n)
end

function ncdirect_cursor_pop(n)
    ccall((:ncdirect_cursor_pop, notcurses), Cint, (Ptr{ncdirect},), n)
end

function ncdirect_clear(nc)
    ccall((:ncdirect_clear, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function ncdirect_capabilities(n)
    ccall((:ncdirect_capabilities, notcurses), Ptr{Cint}, (Ptr{ncdirect},), n)
end

function ncdirect_hline_interp(n, egc, len, h1, h2)
    ccall((:ncdirect_hline_interp, notcurses), Cint, (Ptr{ncdirect}, Ptr{Cchar}, Cuint, Cint, Cint), n, egc, len, h1, h2)
end

function ncdirect_vline_interp(n, egc, len, h1, h2)
    ccall((:ncdirect_vline_interp, notcurses), Cint, (Ptr{ncdirect}, Ptr{Cchar}, Cuint, Cint, Cint), n, egc, len, h1, h2)
end

function ncdirect_box(n, ul, ur, ll, lr, wchars, ylen, xlen, ctlword)
    ccall((:ncdirect_box, notcurses), Cint, (Ptr{ncdirect}, Cint, Cint, Cint, Cint, Ptr{Cint}, Cuint, Cuint, Cuint), n, ul, ur, ll, lr, wchars, ylen, xlen, ctlword)
end

function ncdirect_light_box(n, ul, ur, ll, lr, ylen, xlen, ctlword)
    ccall((:ncdirect_light_box, notcurses), Cint, (Ptr{ncdirect}, Cint, Cint, Cint, Cint, Cuint, Cuint, Cuint), n, ul, ur, ll, lr, ylen, xlen, ctlword)
end

function ncdirect_heavy_box(n, ul, ur, ll, lr, ylen, xlen, ctlword)
    ccall((:ncdirect_heavy_box, notcurses), Cint, (Ptr{ncdirect}, Cint, Cint, Cint, Cint, Cuint, Cuint, Cuint), n, ul, ur, ll, lr, ylen, xlen, ctlword)
end

function ncdirect_ascii_box(n, ul, ur, ll, lr, ylen, xlen, ctlword)
    ccall((:ncdirect_ascii_box, notcurses), Cint, (Ptr{ncdirect}, Cint, Cint, Cint, Cint, Cuint, Cuint, Cuint), n, ul, ur, ll, lr, ylen, xlen, ctlword)
end

function ncdirect_rounded_box(n, ul, ur, ll, lr, ylen, xlen, ctlword)
    ccall((:ncdirect_rounded_box, notcurses), Cint, (Ptr{ncdirect}, Cint, Cint, Cint, Cint, Cuint, Cuint, Cuint), n, ul, ur, ll, lr, ylen, xlen, ctlword)
end

function ncdirect_double_box(n, ul, ur, ll, lr, ylen, xlen, ctlword)
    ccall((:ncdirect_double_box, notcurses), Cint, (Ptr{ncdirect}, Cint, Cint, Cint, Cint, Cuint, Cuint, Cuint), n, ul, ur, ll, lr, ylen, xlen, ctlword)
end

function ncdirect_get(n, absdl, ni)
    ccall((:ncdirect_get, notcurses), Cint, (Ptr{ncdirect}, Ptr{Cvoid}, Ptr{Cint}), n, absdl, ni)
end

function ncdirect_inputready_fd(n)
    ccall((:ncdirect_inputready_fd, notcurses), Cint, (Ptr{ncdirect},), n)
end

function ncdirect_get_nblock(n, ni)
    ccall((:ncdirect_get_nblock, notcurses), Cint, (Ptr{ncdirect}, Ptr{Cint}), n, ni)
end

function ncdirect_get_blocking(n, ni)
    ccall((:ncdirect_get_blocking, notcurses), Cint, (Ptr{ncdirect}, Ptr{Cint}), n, ni)
end

function ncdirect_stop(nc)
    ccall((:ncdirect_stop, notcurses), Cint, (Ptr{ncdirect},), nc)
end

mutable struct ncplane end

const ncdirectv = ncplane

mutable struct ncvisual end

const ncdirectf = ncvisual

function ncdirect_render_image(n, filename, align, blitter, scale)
    ccall((:ncdirect_render_image, notcurses), Cint, (Ptr{ncdirect}, Ptr{Cchar}, Cint, Cint, Cint), n, filename, align, blitter, scale)
end

function ncdirect_render_frame(n, filename, blitter, scale, maxy, maxx)
    ccall((:ncdirect_render_frame, notcurses), Ptr{ncdirectv}, (Ptr{ncdirect}, Ptr{Cchar}, Cint, Cint, Cint, Cint), n, filename, blitter, scale, maxy, maxx)
end

function ncdirect_raster_frame(n, ncdv, align)
    ccall((:ncdirect_raster_frame, notcurses), Cint, (Ptr{ncdirect}, Ptr{ncdirectv}, Cint), n, ncdv, align)
end

function ncdirectf_from_file(n, filename)
    ccall((:ncdirectf_from_file, notcurses), Ptr{ncdirectf}, (Ptr{ncdirect}, Ptr{Cchar}), n, filename)
end

function ncdirectf_free(frame)
    ccall((:ncdirectf_free, notcurses), Cvoid, (Ptr{ncdirectf},), frame)
end

@cenum ncscale_e::UInt32 begin
    NCSCALE_NONE = 0
    NCSCALE_SCALE = 1
    NCSCALE_STRETCH = 2
    NCSCALE_NONE_HIRES = 3
    NCSCALE_SCALE_HIRES = 4
end

@cenum ncblitter_e::UInt32 begin
    NCBLIT_DEFAULT = 0
    NCBLIT_1x1 = 1
    NCBLIT_2x1 = 2
    NCBLIT_2x2 = 3
    NCBLIT_3x2 = 4
    NCBLIT_BRAILLE = 5
    NCBLIT_PIXEL = 6
    NCBLIT_4x1 = 7
    NCBLIT_8x1 = 8
end

struct ncvisual_options
    n::Ptr{ncplane}
    scaling::ncscale_e
    y::Cint
    x::Cint
    begy::Cuint
    begx::Cuint
    leny::Cuint
    lenx::Cuint
    blitter::ncblitter_e
    flags::UInt64
    transcolor::UInt32
    pxoffy::Cuint
    pxoffx::Cuint
end

function ncdirectf_render(n, frame, vopts)
    ccall((:ncdirectf_render, notcurses), Ptr{ncdirectv}, (Ptr{ncdirect}, Ptr{ncdirectf}, Ptr{ncvisual_options}), n, frame, vopts)
end

function ncdirectf_geom(n, frame, vopts, geom)
    ccall((:ncdirectf_geom, notcurses), Cint, (Ptr{ncdirect}, Ptr{ncdirectf}, Ptr{ncvisual_options}, Ptr{Cint}), n, frame, vopts, geom)
end

function ncdirect_stream(n, filename, streamer, vopts, curry)
    ccall((:ncdirect_stream, notcurses), Cint, (Ptr{ncdirect}, Ptr{Cchar}, Cint, Ptr{ncvisual_options}, Ptr{Cvoid}), n, filename, streamer, vopts, curry)
end

function ncdirect_detected_terminal(n)
    ccall((:ncdirect_detected_terminal, notcurses), Ptr{Cchar}, (Ptr{ncdirect},), n)
end

function ncdirect_cantruecolor(n)
    ccall((:ncdirect_cantruecolor, notcurses), Cint, (Ptr{ncdirect},), n)
end

function ncdirect_canchangecolor(n)
    ccall((:ncdirect_canchangecolor, notcurses), Cint, (Ptr{ncdirect},), n)
end

function ncdirect_canfade(n)
    ccall((:ncdirect_canfade, notcurses), Cint, (Ptr{ncdirect},), n)
end

function ncdirect_canopen_images(n)
    ccall((:ncdirect_canopen_images, notcurses), Cint, (Ptr{ncdirect},), n)
end

function ncdirect_canopen_videos(n)
    ccall((:ncdirect_canopen_videos, notcurses), Cint, (Ptr{ncdirect},), n)
end

function ncdirect_canutf8(n)
    ccall((:ncdirect_canutf8, notcurses), Cint, (Ptr{ncdirect},), n)
end

function ncdirect_check_pixel_support(n)
    ccall((:ncdirect_check_pixel_support, notcurses), Cint, (Ptr{ncdirect},), n)
end

function ncdirect_canhalfblock(nc)
    ccall((:ncdirect_canhalfblock, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function ncdirect_canquadrant(nc)
    ccall((:ncdirect_canquadrant, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function ncdirect_cansextant(nc)
    ccall((:ncdirect_cansextant, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function ncdirect_canbraille(nc)
    ccall((:ncdirect_canbraille, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function ncdirect_canget_cursor(nc)
    ccall((:ncdirect_canget_cursor, notcurses), Cint, (Ptr{ncdirect},), nc)
end

function nckey_synthesized_p(w)
    ccall((:nckey_synthesized_p, notcurses), Bool, (UInt32,), w)
end

function nckey_pua_p(w)
    ccall((:nckey_pua_p, notcurses), Bool, (UInt32,), w)
end

function nckey_supppuaa_p(w)
    ccall((:nckey_supppuaa_p, notcurses), Bool, (UInt32,), w)
end

function nckey_supppuab_p(w)
    ccall((:nckey_supppuab_p, notcurses), Bool, (UInt32,), w)
end

function ncstrwidth(egcs, validbytes, validwidth)
    ccall((:ncstrwidth, notcurses), Cint, (Ptr{Cchar}, Ptr{Cint}, Ptr{Cint}), egcs, validbytes, validwidth)
end

function notcurses_version()
    ccall((:notcurses_version, notcurses), Ptr{Cchar}, ())
end

function notcurses_version_components(major, minor, patch, tweak)
    ccall((:notcurses_version_components, notcurses), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), major, minor, patch, tweak)
end

mutable struct notcurses end

mutable struct ncuplot end

mutable struct ncdplot end

mutable struct ncprogbar end

mutable struct ncfdplane end

mutable struct ncsubproc end

mutable struct ncselector end

mutable struct ncmultiselector end

mutable struct ncreader end

mutable struct ncfadectx end

mutable struct nctablet end

mutable struct ncreel end

mutable struct nctab end

mutable struct nctabbed end

@cenum ncalign_e::UInt32 begin
    NCALIGN_UNALIGNED = 0
    NCALIGN_LEFT = 1
    NCALIGN_CENTER = 2
    NCALIGN_RIGHT = 3
end
